# whole-program-debloat

./: .gitignore  CMakeLists.txt  Makefile  README  build.sh  print_results.py  ref-results.out  run.sh  setenv  setwinenv.bat
artifact-eval/: README  create-decker-artifact-dot-zip.sh  export-import-docker.sh
artifact-eval/decker-artifact/: README
spec_makefiles/: Makefile.whole-program-debloat
spec_makefiles/spec2006/: Makefile.whole-program-debloat
spec_makefiles/spec2017/: Makefile.wpd
src/: CMakeLists.txt
src/R/: cg_example.R  high_complexity.R  nginx_perf.R  spec_perf.R
src/debloat_prof/: CMakeLists.txt  Makefile  debloat_prof.c  debloat_prof.h
src/debloat_rt/: CMakeLists.txt  debloat_rt.cpp  debloat_rt.cpp-chris  debloat_rt.cpp-sharjeel  debloat_rt.h  libdebloatrt.version  switch_dt.sh
src/debloat_rt/DTs/: default.h
src/debloat_rt/ics/: Makefile  Makefile-windows  README  ics.cpp  ics.ll
src/drivers/: all.sh  asplos_2023_hacky.sh  backup-outputs.sh  calc-false-positives.py  cat_wpd_stats.sh  check-algs.sh  dump_times.py  env-vars  env-vars-2017  get_binary_sizes.sh  grab-files.sh  hack-busted.sh  hack-on-me.sh  hack2.sh  hack3.sh  hack4.sh  learn.sh  make.sh  make_all.sh  move-build-folders-around.sh  post-process.sh  print_results.py  run.sh  sanity_check_cgpprof.py
src/ensue/: create-artd-datalog-ensue.sh
src/gadget/: GSA.py  base.csv  bicsa.csv  bicsa_linker.csv  calculate.py  debloatedBenchmark.py  linker.csv  security.sh  sink.csv  sink_linker.csv  spec.sh  temp.py
src/gadget-chains-pasture/: 00-main.py  01-stage-bins.sh  02-run-roptool.py  03-grep-results.py  04-sanity-check-results.sh
src/gadget-core/: GSA.py  calculate.py  nginx.sh  security.sh  separate.py
src/gadget-spec/: calculate.py  spec.sh
src/jop-parsing/: collate_metrics.py  davit_driver.py  jop_rocket_parser.py  jrp_aux.py
src/learning/: DecisionTreeToCpp.py  dump_times.py  learn_dt.py  learn_lstm.py  parse_artd_profile_log.py  parse_cgpprof_out.py  parse_debprof_out.py  run_learn_dt.sh
src/nginx/: Makefile.artd  Makefile.wpd  linker.lds  linker.py
src/passes/: CMakeLists.txt
test/: Makefile  readme
test/00_test/: main.c
(+276 files in other folders)
